--- a/scss/civicrm/administer/common/_mixins.scss
+++ b/scss/civicrm/administer/common/_mixins.scss
@@ -18,16 +18,6 @@
         border: none;
         padding: 15px;
         vertical-align: middle;
-
-        @if $overflow == 'false' {
-          // prevent table from overflowing
-          overflow: hidden;
-          white-space: normal;
-
-          .crm-editable {
-            white-space: normal;
-          }
-        }
       }
 
       & > th {
