--- a/scss/civicrm/administer/common/ui-tabs/_content.scss
+++ b/scss/civicrm/administer/common/ui-tabs/_content.scss
@@ -3,4 +3,5 @@
   border: $panel-border;
   border-width: 0 1px 1px;
   border-radius: 0;
+  overflow-y: visible;
 }
