--- a/scss/civicrm/administer/tags/_tags.scss
+++ b/scss/civicrm/administer/tags/_tags.scss
@@ -4,7 +4,7 @@
     background: none;
     box-shadow: none;
 
-    #cat {
+    #option11 {
       @include civihr_panel();
     }
 
